--- a/index.html
+++ b/index.html
@@ -109,7 +109,6 @@
       .blog-title {
         font-size: 1.6rem;
         font-weight: bold;
-        color: #005bac;
         margin-bottom: 2rem;
         text-align: center;
         font-family: inherit;
@@ -520,7 +519,14 @@
         </div>
       </div>
     </section>
-
+    <div style="text-align: center">
+      <img
+        src="assets/icon_01.png"
+        width="60"
+        height="60"
+        style="width: 60px; height: 60px"
+      />
+    </div>
     <!-- 「あなたの街の保険屋さん」カード（3つ並列表示） -->
     <section
       style="
@@ -531,14 +537,6 @@
           'Yu Mincho', 'MS P明朝', 'MS PMincho', serif !important;
       "
     >
-      <div style="text-align: center">
-        <img
-          src="assets/icon_01.png"
-          width="60"
-          height="60"
-          style="width: 60px; height: 60px"
-        />
-      </div>
       <div class="blog-title">あなたの街の保険屋さん</div>
       <div class="vertical-card-section" id="vertical-card-section">
         <img
@@ -662,13 +660,18 @@
           style="width: 50px; height: 60px"
         />
       </div>
-      <div
-        class="container performance-inner"
-        style="margin-bottom: 40px; padding-left: 60px; padding-right: 60px"
-      >
+      <div class="container performance-inner" style="margin-bottom: 40px">
         <h2>700世帯以上 2009年からの実績</h2>
-        <div style="display: flex">
-          <div style="font-weight: 300">
+        <div style="display: flex; justify-content: space-between; width: 100%">
+          <div
+            style="
+              font-weight: 300;
+              margin-right: 150px;
+              display: flex;
+              flex-direction: column;
+              justify-content: center;
+            "
+          >
             <p style="margin-bottom: 30px">
               保険の選択が難しくて、種類が多すぎて迷われることがあります。私たちはそれを理解し、わかりやすく説明し、あなたのライフスタイルに合った提案を心掛けています。
             </p>
