--- a/index.html
+++ b/index.html
@@ -28,6 +28,95 @@
         box-shadow: 0 2px 8px rgba(0, 0, 0, 0.06);
         animation: headerFeedIn 0.5s cubic-bezier(0.4, 0, 0.2, 1);
       }
+      /* 水色ヘッダー */
+      .blue-header {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 60px;
+        background: #8eceda;
+        color: #fff;
+        z-index: 9999;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 20px;
+        font-weight: bold;
+        letter-spacing: 0.05em;
+        opacity: 0;
+        pointer-events: none;
+        transition: opacity 0.3s;
+        font-family: "ヒラギノ明朝 ProN", "Hiragino Mincho ProN", "游明朝",
+          "Yu Mincho", "MS P明朝", "MS PMincho", serif !important;
+      }
+      .blue-header.visible {
+        opacity: 1;
+        pointer-events: auto;
+      }
+      /* 追加: 水色ヘッダー用ナビゲーション */
+      .blue-header-inner {
+        width: 100%;
+        max-width: 1200px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding-left: 60px;
+        padding-right: 60px;
+        height: 60px;
+        box-sizing: border-box;
+      }
+      .blue-header .logo a {
+        color: #fff;
+        text-decoration: none;
+        font-size: 24px;
+        font-weight: bold;
+        font-family: inherit;
+      }
+      .blue-header .site-nav ul {
+        display: flex;
+        gap: 2rem;
+        margin: 0;
+        padding: 0;
+        list-style: none;
+      }
+      .blue-header .site-nav .nav-link {
+        color: #fff;
+        text-decoration: none;
+        font-size: 1rem;
+        font-family: inherit;
+        transition: opacity 0.2s;
+        opacity: 0.95;
+      }
+      .blue-header .site-nav .nav-link:hover {
+        opacity: 1;
+        text-decoration: underline;
+      }
+      @media (max-width: 900px) {
+        .blue-header-inner,
+        .site-header .container {
+          padding-left: 20px !important;
+          padding-right: 20px !important;
+        }
+        .blue-header .site-nav ul {
+          gap: 1rem;
+        }
+      }
+      @media (max-width: 700px) {
+        .blue-header-inner {
+          flex-direction: column;
+          align-items: flex-start;
+          height: auto;
+          padding: 10px 10px;
+        }
+        .blue-header .logo {
+          margin-bottom: 6px;
+        }
+        .blue-header .site-nav ul {
+          flex-wrap: wrap;
+          gap: 0.7rem;
+        }
+      }
       @keyframes headerFeedIn {
         from {
           transform: translateY(-100%);
@@ -433,6 +522,27 @@
     </style>
   </head>
   <body>
+    <!-- 水色ヘッダー -->
+    <div class="blue-header" id="blue-header">
+      <div class="blue-header-inner">
+        <div class="logo">
+          <a href="/" class="shine-target" style="font-size: 24px"
+            >株式会社ノバ</a
+          >
+        </div>
+        <nav class="site-nav">
+          <ul>
+            <li>
+              <a href="#" class="nav-link">ライフプランから保険を考える</a>
+            </li>
+            <li><a href="#" class="nav-link">損害保険</a></li>
+            <li><a href="#" class="nav-link">相続相談</a></li>
+            <li><a href="#" class="nav-link">会社概要・アクセス</a></li>
+            <li><a href="#" class="nav-link">お問い合わせ</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
     <header class="site-header header-visible">
       <div class="container" style="padding-left: 60px; padding-right: 60px">
         <div class="logo">
@@ -475,6 +585,7 @@
             align-items: flex-end;
             font-family: 'ヒラギノ明朝 ProN', 'Hiragino Mincho ProN', '游明朝',
               'Yu Mincho', 'MS P明朝', 'MS PMincho', serif !important;
+            margin-right: 100px;
           "
         >
           <h1
@@ -484,6 +595,7 @@
               color: #fff;
               font-size: 2rem;
               margin-bottom: 1rem;
+
               font-weight: bold;
               text-align: right;
               font-family: inherit;
@@ -893,8 +1005,74 @@
       "
     >
       <div class="container">
-        <nav class="footer-nav">
-          <!-- フッターリンク省略 -->
+        <nav class="footer-nav" style="margin-bottom: 24px">
+          <ul
+            style="
+              display: flex;
+              justify-content: center;
+              gap: 32px;
+              list-style: none;
+              padding: 0;
+              margin: 0;
+              font-size: 16px;
+            "
+          >
+            <li>
+              <a
+                href="#"
+                style="
+                  color: #005bac;
+                  text-decoration: none;
+                  font-family: inherit;
+                "
+                >ライフプランから保険を考える</a
+              >
+            </li>
+            <li>
+              <a
+                href="#"
+                style="
+                  color: #005bac;
+                  text-decoration: none;
+                  font-family: inherit;
+                "
+                >損害保険</a
+              >
+            </li>
+            <li>
+              <a
+                href="#"
+                style="
+                  color: #005bac;
+                  text-decoration: none;
+                  font-family: inherit;
+                "
+                >相続相談</a
+              >
+            </li>
+            <li>
+              <a
+                href="#"
+                style="
+                  color: #005bac;
+                  text-decoration: none;
+                  font-family: inherit;
+                "
+                >会社概要・アクセス</a
+              >
+            </li>
+            <li>
+              <a
+                href="#"
+                style="
+                  color: #005bac;
+                  text-decoration: none;
+                  font-family: inherit;
+                "
+                >お問い合わせ</a
+              >
+            </li>
+          </ul>
         </nav>
 
         <div class="social">
@@ -957,6 +1135,9 @@
       const header = document.querySelector(".site-header");
       let headerVisible = true;
 
+      // 水色ヘッダー
+      const blueHeader = document.getElementById("blue-header");
+
       function onScroll() {
         const currentScrollY = window.scrollY;
         if (currentScrollY > lastScrollY && currentScrollY > 80) {
@@ -965,6 +1146,8 @@
             header.classList.remove("header-visible");
             header.classList.add("header-hidden");
             headerVisible = false;
+            // 水色ヘッダー表示
+            blueHeader.classList.add("visible");
           }
         } else {
           // 上にスクロール→ヘッダー表示（フィードイン）
@@ -972,6 +1155,8 @@
             header.classList.remove("header-hidden");
             header.classList.add("header-visible");
             headerVisible = true;
+            // 水色ヘッダー非表示
+            blueHeader.classList.remove("visible");
           }
         }
         lastScrollY = currentScrollY;
@@ -1035,6 +1220,8 @@
             perf.classList.add("performance-visible");
           }
         }
+        // 初回は水色ヘッダー非表示
+        blueHeader.classList.remove("visible");
       });
     </script>
   </body>
